# climbing_tracker

./: README.md  bouldering.db  climbs.sql  database.py  dependencies.py  index.html  main.py  models.py  pyproject.toml  schemas.py  script.js  utils.py
static/: index.html  login.html  script.js  signup.html  style.css
